# holofg

./: .gitignore  AlexBrush-Regular.ttf.import  KOMIKAX_.ttf.import  README.md  chara_highlight.tres  export_presets.cfg  game.tscn  icon.svg.import  input_cfg.json  input_cfg_kb.json  lobby.tscn  motion_blur_obj.tres  motion_streaks_shader.tres  ppl_overlay_shader.tres  project.godot  super_bg_filter.tres  test_3d.tscn  test_holepunch.tscn  test_mesh.tscn  test_rtc.tscn  test_ser.tscn  test_toon.tscn  toon.tres  toon_c.tres  toon_hl.tres
chara_scenes/: chara_2.tscn  chara_2_base.tscn  chara_2_lobby.tscn
database/: chara_data_1.json  chara_data_2.json  chara_effects_2.json  chara_palette_2.json  chara_streaks_2.json  chara_summons_2.json  common_effects.json
effects/: dmg_flash_tmp_1.png.import  motion_streaks.kra  motion_streaks.png.import  motion_streaks_mat.tres  super_startup_flash_tmp_1.png.import
scenes/: bigtexts.tscn  counter.tscn  fadein.tscn  game.tscn  game2.tscn  inputmap.tscn  lobby.tscn  lobby_base.tscn  lobby_online.tscn  lobby_training.tscn  lobby_voxel.tres  main_menu.tscn  main_menu2.tscn  main_menu_old.tscn  opening logos.tscn  popup.tscn  pressanybutton.tscn  settings.tscn
scripts/: data_structs.gd  debug_chara.gd  debug_chara_sprite.gd  frame_meter.gd  input_buffer.gd  main_menu.gd  multiplayer.gd  rollback_input.gd  test_1.gd  test_2.gd  test_mesh.gd  test_rtc.gd  tester.gd
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main copy.rs  main.rs
ui/: chara_sel_frame.png.import  chara_sel_frame.psd  fight.png.import  ready.kra  (+15 more)
(+245 files in other folders)
