[package]
name = "fg-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "*"
ngrok = "0.13.1"
tokio = { version = "1.*", features = ["rt-multi-thread", "macros"] }